--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,9 @@ dist
 *_LOCAL_*.txt
 *_REMOTE_*.txt
 
+### macOS ###
+.DS_Store
+
 ### PyCharm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
